crates/bityzba/tests/ui/fail/duplicate_field.stderr
error: duplicate field in fields! macro
  --> tests/ui/fail/duplicate_field.rs:12:9
   |
12 |         start: 1,
   |         ^^^^^
